minikube/pokemon-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: pokemon-gateway
  name: pokemon-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pokemon-gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/spring-net: "true"
        io.kompose.service: pokemon-gateway
    spec:
      containers:
        - image: ghcr.io/teunbuis-semester6-pogokwetter/pokemon-gateway:latest
          name: pokemon-gateway
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
