minikube/pokemon-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: pokemon-redis
  name: pokemon-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pokemon-redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/spring-net: "true"
        io.kompose.service: pokemon-redis
    spec:
      containers:
        - args:
            - redis-server
            - --requirepass
            - Teun
          image: redis:alpine
          name: pokemon-redis
          ports:
            - containerPort: 6379
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: pokemonredis
      restartPolicy: Always
      volumes:
        - name: pokemonredis
          persistentVolumeClaim:
            claimName: pokemonredis
status: {}
