minikube/pokemon-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/spring-net: "true"
    io.kompose.service: pokemon-service
  name: pokemon-service
spec:
  containers:
    - image: ghcr.io/teunbuis-semester6-pogokwetter/pokemon-service:latest
      name: pokemon-service
      ports:
        - containerPort: 8080
      resources: {}
  restartPolicy: OnFailure
status: {}
