minikube/redis-insight-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-insight
  name: redis-insight
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-insight
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/spring-net: "true"
        io.kompose.service: redis-insight
    spec:
      containers:
        - image: redislabs/redisinsight:latest
          name: redis-insight
          ports:
            - containerPort: 8001
          resources: {}
      restartPolicy: Always
status: {}
