minikube/pokemonimg-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: pokemonimg-mysql
  name: pokemonimg-mysql
spec:
  ports:
    - name: "3307"
      port: 3307
      targetPort: 3307
  selector:
    io.kompose.service: pokemonimg-mysql
status:
  loadBalancer: {}
