minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/pokemon
            pathType: Prefix
            backend:
              service:
                name: pokemon-service
                port:
                  number: 8080
          - path: /api/userpokemon
            pathType: Prefix
            backend:
              service:
                name: pokemon-service
                port:
                  number: 8080
          - path: /api/pokemonimg
            pathType: Prefix
            backend:
              service:
                name: pokemon-service
                port:
                  number: 8080
          - path: /redis
            pathType: Prefix
            backend:
              service:
                name: redis-insight
                port:
                  number: 8001
          - path: /rabbitmq(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: rabbit-mq
                port:
                  number: 15672
